--- a/pages/nutricion.html
+++ b/pages/nutricion.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/nutricionStyle.css">
+    <link rel="stylesheet" href="../assets/css/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -35,10 +36,10 @@
                                 <a class="nav-link" href="nutricion.html">Nutrición</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Planes</a>
+                                <a class="nav-link" href="../index.html">Planes</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Noticias</a>
+                                <a class="nav-link" href="../index.html">Noticias</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./rutinas/rutinas.html">Rutinas</a>
